[gd_scene load_steps=4 format=3 uid="uid://bsgio2wgxwjd1"]

[ext_resource type="Script" path="res://scenes/main/pedestal/pedestal.gd" id="1_vjfs8"]
[ext_resource type="Texture2D" uid="uid://b2ahbujgm8kxd" path="res://scenes/main/pedestal/pedestal.png" id="2_chabx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jquh8"]
size = Vector2(98.25, 94.25)

[node name="Pedestal" type="Button"]
offset_right = 104.0
offset_bottom = 138.0
focus_mode = 0
script = ExtResource("1_vjfs8")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="BaseSprite" type="Sprite2D" parent="."]
position = Vector2(49, 102)
scale = Vector2(6.18182, 6.18182)
texture = ExtResource("2_chabx")

[node name="InvArea" type="Area2D" parent="."]
position = Vector2(1, 1)
collision_layer = 0
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="InvArea"]
position = Vector2(51, 50)
shape = SubResource("RectangleShape2D_jquh8")

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="body_entered" from="InvArea" to="." method="_on_inv_area_body_entered"]
[connection signal="body_exited" from="InvArea" to="." method="_on_inv_area_body_exited"]
[connection signal="input_event" from="InvArea" to="." method="_on_inv_area_input_event"]
